--- a/src/Acme/ContactsBundle/Resources/config/routing.yml
+++ b/src/Acme/ContactsBundle/Resources/config/routing.yml
@@ -1,3 +1,3 @@
 acme_contacts_homepage:
-    pattern:  /hello/{name}
+    pattern:  /hello
     defaults: { _controller: AcmeContactsBundle:Default:index }
