--- a/src/Acme/ContactsBundle/Resources/config/routing.yml
+++ b/src/Acme/ContactsBundle/Resources/config/routing.yml
@@ -1,3 +1,8 @@
 acme_contacts_homepage:
     pattern:  /
     defaults: { _controller: AcmeContactsBundle:Default:index }
+    
+acme_contacts_getall:
+    pattern: /contacts
+    defaults: { _controller: AcmeContactsBundle:Default:getAll }
+
